--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
     <header>
+        <div class="container">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Home</a>
+                <a class="navbar-brand" href="#">
+                    <img src="/images/kosovo_11948811.png" alt="Bootstrap" width="30" height="24">
+                  </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -35,7 +38,7 @@
               </div>
             </div>
           </nav>
-
+        </div>
     </header>
     <main>
 
