change card img

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="p-2 g-col-6 " style="width: 18rem;">
-                    <img src="/images/liqeni-1.jpg" class="card-img-top" alt="View of Rugova">
+                    <img src="/images/liqenat.jpg" class="card-img-top" alt="View of Rugova">
                     <div class="card-body">
                         <h5 class="card-title">Rugova Valley</h5>
                         <p class="card-text">Mountain / Nature </p>
