add links to nav bar

--- a/pages/brezovica.html
+++ b/pages/brezovica.html
@@ -27,13 +27,16 @@
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Places</a>
+                                <a class="nav-link" href="/pages/brezovica.html">Brezovica</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Galery</a>
+                                <a class="nav-link" href="/pages/mirusha.html">Mirusha</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/pages/rugova.html">Rugova</a>
                             </li>
                         </ul>
                         <span class="navbar-text">
@@ -88,12 +91,12 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <div class="container">
-            <div class="card ">
-                <div class="card-body">
-                  <h5 class="card-title fs-1">Brezovica Nature & Ski</h5>
-                  <h6 class="card-subtitle mb-2 text-body-secondary fs-3 text">What can I expect from Brezovica?</h6>
-                  <p class="card-text lh-lg text-start">
+        <div class="container mt-5">
+            <div class="card mt-5  ">
+                <div class="card-body mt-4">
+                  <h5 class="card-title fs-1 mt-4">Brezovica Nature & Ski</h5>
+                  <h6 class="card-subtitle mb-2 text-body-secondary fs-3 text mt-3">What can I expect from Brezovica?</h6>
+                  <p class="card-text lh-lg text-start mt-5">
 
                     Brezovica is a unique ski resort located on the northwest part of Sharr Mountain at an altitude of 900 – 2,520 meters. Favourable climate conditions make this region suitable for tourism, sport and recreation during the whole year.
                     <br>
@@ -105,6 +108,7 @@
                 </div>
               </div>
         </div>
+        
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
