add pages rugova and style page

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
                         <img src="/images/kosovo-map.jpg" class="card-img-top" alt="View of Brezovica">
 
-                        <a href="#" class="btn btn-primary">Explore</a>
+                        <a href="/pages/brezovica.html" class="btn btn-primary">Explore</a>
                     </div>
                 </div>
                 <div class="p-2 g-col-6 " style="width: 18rem;">
@@ -115,7 +115,7 @@
 
                         <img src="/images/kosovo-map.jpg" class="card-img-top" alt="View of Brezovica">
 
-                        <a href="#" class="btn btn-primary">Explore</a>
+                        <a href="/pages/mirusha.html" class="btn btn-primary">Explore</a>
                     </div>
                 </div>
                 <div class="p-2 g-col-6 " style="width: 18rem;">
@@ -126,7 +126,7 @@
 
                         <img src="/images/kosovo-map.jpg" class="card-img-top" alt="View of Brezovica">
 
-                        <a href="#" class="btn btn-primary">Explore</a>
+                        <a href="/pages/rugova.html" class="btn btn-primary">Explore</a>
                     </div>
                 </div>
             </div>
