--- a/pages/rugova.html
+++ b/pages/rugova.html
@@ -59,24 +59,24 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/brezovica.jpg" class="d-block w-100" alt="...">
+                    <img src="/images//rugovaf.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Amazing Nature in Kosovo</h5>
-                        <p>Guide about viziting Kosova</p>
+
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/brezovica1.jpg" class="d-block w-100" alt="Mirusha Watterfals">
+                    <img src="/images/rugove2.jpg" class="d-block w-100" alt="Mirusha Watterfals">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Amazing Nature in Kosovo</h5>
-                        <p>We are your local guide</p>
+
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/brezovica2.jpg" class="d-block w-100" alt="...">
+                    <img src="/images/liqeni-1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Amazing Nature in Kosovo</h5>
-                        <p>Top 3 adventure destination</p>
+
                     </div>
                 </div>
             </div>
@@ -94,21 +94,36 @@
         <div class="container mt-5">
             <div class="card mt-5  ">
                 <div class="card-body mt-4">
-                  <h5 class="card-title fs-1 mt-4">Brezovica Nature & Ski</h5>
-                  <h6 class="card-subtitle mb-2 text-body-secondary fs-3 text mt-3">What can I expect from Brezovica?</h6>
-                  <p class="card-text lh-lg text-start mt-5">
+                    <h5 class="card-title fs-1 mt-4">Rugova Valley</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary fs-3 text mt-3">What can I expect from Rugova
+                        Valley?</h6>
+                    <p class="card-text lh-lg text-start mt-5">
 
-                    Brezovica is a unique ski resort located on the northwest part of Sharr Mountain at an altitude of 900 – 2,520 meters. Favourable climate conditions make this region suitable for tourism, sport and recreation during the whole year.
-                    <br>
-                    The ski resort possess 14 pistes, five chair lifts and five ski lifts, connected with 16 km of ski slopes of the average length 3 km. Currently, only 2 chair lifts and 1 ski lift are functioning.
-                    <br>
-                    The most well known hotels in Brezovica are: Hotel Narcis, Hotel Molika, Hotel Breza, Shtepija e Gurit and Woodland Hotel. In addition, there are also rentable private houses where you can accommodate yourself.
+
+                        Rugova Valley is located in the heart of Dukagjini, in north-western Kosovo. It covers an area
+                        of 32.000 hectares. Its highest peak is Coursed Mountain, with an altitude of 2560 meters.
+
+                        Among several characteristics that distinguish this valley, following are the most important
+                        ones
+                        </p>
+                    <ul class="text list text-start">
+                        <li>Bistrica River, which passes throughout 12 kilometers of the valley</li>
+                        <li>Waterfalls that fall from a height of 30 meters</li>
+                        <li>Two lakes at an altitude of 1 800 meters above sea level and</li>
+                        <li>A number of caves</li>
+                    </ul>
+                    <p class="card-text lh-lg text-start mt-5">
+                    Rugova Valley is considered as an ideal place to spend a day or a couple of days, when you need to
+                    relax and get away from the daily routine and dynamic life in the city. It is a quiet preserved and
+                    unexplored region, and this offers a unique entertainment opportunity for the lovers of eco and
+                    rural tourism.
+
                     </p>
-                  
+
                 </div>
-              </div>
+            </div>
         </div>
-        
+
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
