add link to nav icon

--- a/pages/brezovica.html
+++ b/pages/brezovica.html
@@ -17,7 +17,7 @@
         <div class="container-xxl">
             <nav class="navbar  navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href= "https://sq.wikipedia.org/wiki/Kosova">
                         <img src="/images/kosovo_11948811.png" alt="Bootstrap" width="30" height="24">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
