--- a/pages/mirusha.html
+++ b/pages/mirusha.html
@@ -17,7 +17,7 @@
         <div class="container-xxl">
             <nav class="navbar  navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="https://sq.wikipedia.org/wiki/Kosova">
                         <img src="/images/kosovo_11948811.png" alt="Bootstrap" width="30" height="24">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/mirusha_w.jpg" class="d-block w-100" alt="...">
+                    <img src="/images/mirusha_w.jpg" class="d-block w-100" alt="Mirusha images">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Amazing Nature in Kosovo</h5>
                         
